[gd_scene load_steps=2 format=3 uid="uid://vc3up6vs2chv"]

[ext_resource type="Script" path="res://scenes/game_hud/game_hud.gd" id="1_qdkw1"]

[node name="GameHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdkw1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Water" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Water"

[node name="Field" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Field"

[node name="Scythe" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Scythe"

[node name="Market" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Market"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 2

[node name="Potato" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Potato"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Field" to="." method="_on_field_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Scythe" to="." method="_on_scythe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Market" to="." method="_on_market_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Potato" to="." method="_on_potato_pressed"]
